--- a/.gitignore
+++ b/.gitignore
@@ -110,6 +110,6 @@ project/plugins/project/
 *.bloop
 .vscode/
 
-application.conf
+conf/application.conf
 
 # End of https://www.gitignore.io/api/sbt,scala,intellij
